[gd_scene load_steps=8 format=2]

[ext_resource path="res://Image/Menu/hiruko.png" type="Texture" id=1]
[ext_resource path="res://Image/Menu/icon.png" type="Texture" id=2]
[ext_resource path="res://Script/Menu/Hiruko.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.4742, 31.0715 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.6202, 30.5311 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.4742, 31.1048 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30.701, 32.1855 )

[node name="Hiruko" type="Node2D"]
script = ExtResource( 3 )

[node name="hiruko" type="Sprite" parent="."]
position = Vector2( 640, 595 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 1010.0
margin_top = 348.0
margin_right = 1464.0
margin_bottom = 532.0
text = "



A l'origine Hiruko naqui grâce a un rituel sacré partiellement effectué, qui engendra un être difforme né sans os, comparable à une sangsue ou une méduse. lors de son existance, il aquis la maitrise du sang dans le but d'attomiser ses darons pour se venger"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 979.945
margin_top = 682.076
margin_right = 1174.95
margin_bottom = 897.076
text = "



Hiruko utilisant le sang pour le combat 
elle n'hésite pas à le manipuler avec violence
pour pourfendre ses ennemies à distance"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 900.0
margin_top = 176.0
margin_right = 974.0
margin_bottom = 201.0
text = "HIRUKO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="."]
position = Vector2( 1370, 750 )
texture = ExtResource( 2 )

[node name="AreaI" type="Area2D" parent="icon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="icon/AreaI"]
shape = SubResource( 1 )

[node name="TextI" type="RichTextLabel" parent="icon"]
visible = false
margin_left = -38.3656
margin_top = -68.6258
margin_right = 41.6344
margin_bottom = -28.6258
text = "JKEFJBKSBFFKSJFBFS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon2" type="Sprite" parent="."]
position = Vector2( 1500, 750 )
texture = ExtResource( 2 )

[node name="AreaI2" type="Area2D" parent="icon2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="icon2/AreaI2"]
shape = SubResource( 2 )

[node name="TextI2" type="RichTextLabel" parent="icon2"]
visible = false
margin_left = -37.2848
margin_top = -67.0047
margin_right = 53.7152
margin_bottom = -27.0047
text = "KJLDDDZJDLSDISUCSND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon3" type="Sprite" parent="."]
position = Vector2( 1370, 850 )
texture = ExtResource( 2 )

[node name="AreaI3" type="Area2D" parent="icon3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="icon3/AreaI3"]
shape = SubResource( 3 )

[node name="TextI3" type="RichTextLabel" parent="icon3"]
visible = false
margin_left = -41.6077
margin_top = -61.0607
margin_right = 64.3923
margin_bottom = -21.0607
text = "UDZJDLDZLDNLDNZDNZKDZ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon4" type="Sprite" parent="."]
position = Vector2( 1500, 850 )
texture = ExtResource( 2 )

[node name="AreaI4" type="Area2D" parent="icon4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="icon4/AreaI4"]
shape = SubResource( 4 )

[node name="TextI4" type="RichTextLabel" parent="icon4"]
visible = false
margin_left = -37.8252
margin_top = -60.5203
margin_right = 51.1748
margin_bottom = -20.5203
text = "UHODHIZDHZDZDZD"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="icon/AreaI" to="." method="_on_AreaI_mouse_entered"]
[connection signal="mouse_exited" from="icon/AreaI" to="." method="_on_AreaI_mouse_exited"]
[connection signal="mouse_entered" from="icon2/AreaI2" to="." method="_on_AreaI2_mouse_entered"]
[connection signal="mouse_exited" from="icon2/AreaI2" to="." method="_on_AreaI2_mouse_exited"]
[connection signal="mouse_entered" from="icon3/AreaI3" to="." method="_on_AreaI3_mouse_entered"]
[connection signal="mouse_exited" from="icon3/AreaI3" to="." method="_on_AreaI3_mouse_exited"]
[connection signal="mouse_entered" from="icon4/AreaI4" to="." method="_on_AreaI4_mouse_entered"]
[connection signal="mouse_exited" from="icon4/AreaI4" to="." method="_on_AreaI4_mouse_exited"]
